@@ -89,6 +89,9 @@ PIG-2011: Speed up TestTypedMap.java (dvryaboy)
 
 BUG FIXES
 
+PIG-2146: POStore.getSchema() returns null because of which PigOutputCommitter 
+ is not storing schema while cleanup (thejas)
+
 PIG-2027: NPE if Pig don't have permission for log file (daijy)
 
 PIG-2171: TestScriptLanguage is broken on trunk (daijy and thejas)
